Thu Sep 29 17:51:15 2005                        Michael Jennings (mej)

Added SCons template for specgen.

Use URL for source tarball if available.

Print progress .'s while downloading package.

Use %{name} and %{version} in generated spec files whenever possible.
----------------------------------------------------------------------
Thu Sep 29 17:53:18 2005                        Michael Jennings (mej)

Oops.
----------------------------------------------------------------------
Mon Oct 17 13:45:34 2005                        Michael Jennings (mej)

Allow nuke_tree() to take multiple parameters.
----------------------------------------------------------------------
Mon Oct 17 16:01:22 2005                        Michael Jennings (mej)

Allow mzbuild to accept URL's instead of having to wget them first.
----------------------------------------------------------------------
Thu Oct 27 18:00:44 2005                        Michael Jennings (mej)

Initial (VERY incomplete) work on "abiscan," a tool for scanning
platform ABI's, cataloging binary-level dependencies, and gauging
binary compatibility.
----------------------------------------------------------------------
Mon Nov  7 14:09:45 2005                        Michael Jennings (mej)

Stupid typos.
----------------------------------------------------------------------
Fri Dec 16 17:44:52 2005                        Michael Jennings (mej)

Fixed web template and added horde3 template.
----------------------------------------------------------------------
Fri Feb  3 14:49:44 2006                        Michael Jennings (mej)

Allow for chroot jail imaging info on the command line and in
non-parallel builds.

Use /bin/rpm from chroot jail whenever possible in case the jail's
version doesn't match the host's version.

Allow URL's in parameters passed to srctool (mzimport, mzmerge, etc.)
----------------------------------------------------------------------